--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,9 @@
     </dependencies>
 
     <build>
-        <sourceDirectory>src/main/java</sourceDirectory>
-        <testSourceDirectory>src/test/scala</testSourceDirectory>
+        <!--mark java source dir-->
+        <!--<sourceDirectory>src/main/java</sourceDirectory>
+        <testSourceDirectory>src/test/java</testSourceDirectory>-->
 
         <plugins>
             <plugin>
